build html; style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <div class="title">Calculator</div>
+    <div class="calcBody">
+      <div class="display">displayPlaceholder</div>
+      <div class="buttonMatrix">
+        <button class="btn function c">C</button>
+        <button class="btn function"></button>
+        <button class="btn function"></button>
+        <button class="btn operator divide">/</button>
+        <button class="btn number seven">7</button>
+        <button class="btn number eight">8</button>
+        <button class="btn number nine">9</button>
+        <button class="btn operator multiply">x</button>
+        <button class="btn number four">4</button>
+        <button class="btn number five">5</button>
+        <button class="btn number six">6</button>
+        <button class="btn operator subtract">-</button>
+        <button class="btn number one">1</button>
+        <button class="btn number two">2</button>
+        <button class="btn number three">3</button>
+        <button class="btn operator add">+</button>
+        <button class="btn number zero">0</button>
+        <button class="btn number decimal">.</button>
+        <button class="btn operator equal">=</button>
+      </div>
+    </div>
+  </body>
   <script src="main.js"></script>
 </html>
