disable unused buttons

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="calcBody">
       <div class="display">displayPlaceholder</div>
       <div class="buttonMatrix">
-        <button class="btn function c">C</button>
-        <button class="btn function"></button>
-        <button class="btn function"></button>
+        <button class="btn function clear">C</button>
+        <button class="btn function" disabled></button>
+        <button class="btn function" disabled></button>
         <button class="btn operator divide">/</button>
         <button class="btn number seven">7</button>
         <button class="btn number eight">8</button>
