create function to handle 4 arithetic operations

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="btn operator add">+</button>
         <button class="btn number zero">0</button>
         <button class="btn number decimal">.</button>
-        <button class="btn operator equal">=</button>
+        <button class="btn equal">=</button>
       </div>
     </div>
   </body>
