--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="btn number three">3</button>
         <button class="btn operator add">+</button>
         <button class="btn number zero">0</button>
-        <button class="btn number decimal">.</button>
+        <button class="btn decimal">.</button>
         <button class="btn equal">=</button>
       </div>
     </div>
