blur clear button on click

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="calcBody">
       <div class="display">displayPlaceholder</div>
       <div class="buttonMatrix">
-        <button class="btn function clear">C</button>
+        <button onclick="this.blur()" class="btn function clear">C</button>
         <button class="btn function" disabled></button>
         <button class="btn function" disabled></button>
         <button class="btn operator divide">/</button>
@@ -32,7 +32,7 @@
         <button class="btn operator subtract">-</button>
         <button class="btn number one">1</button>
         <button class="btn number two">2</button>
-        <button class="btn number three">3</button>
+        <button onclick="this.blur()" class="btn number three">3</button>
         <button class="btn operator add">+</button>
         <button class="btn number zero">0</button>
         <button class="btn decimal">.</button>
